tests/no_source_error/no_source_error.exp
Error ------------------------------------------------------------------------------------------------ no_source.js:18:7

Cannot call `x.filter` because property `bar` is missing in `Foo` [1] but exists in `FooPlus` [2] in the first argument.
[incompatible-call]

   no_source.js:18:7
   18|     x.filter(this.z);
             ^^^^^^

References:
   no_source.js:17:20
   17|     const x: Array<Foo> = [];
                          ^^^ [1]
   no_source.js:15:12
   15|   +z : (x: FooPlus) => boolean = (x) => { return true; }
                  ^^^^^^^ [2]



Found 1 error

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
